# claude-development-cli

./: .gitignore  Cargo.toml  README.md
.githooks/: pre-commit
scripts/: stt.py
src/: app.rs  event.rs  main.rs  session.rs
src/pane/: grid.rs  mod.rs
src/pty/: mod.rs  reader.rs
src/ui/: mod.rs  pane_widget.rs
src/voice/: mod.rs  recorder.rs  transcriber.rs
